text alignment fixed

--- a/style.css
+++ b/style.css
@@ -27,11 +27,6 @@ h1 {
   text-shadow: 2px 2px 5px black;
 }
 
-h3,
-.btm-text {
-  text-align: center;
-}
-
 .main-title {
   text-align: center;
   font-size: 3rem;
